Update to new theme colors

--- a/src/assets/css/app.styl
+++ b/src/assets/css/app.styl
@@ -1,14 +1,15 @@
 // Specify overrides (theme and/or base variables etc.)
 // See https://vuetifyjs.com/quick-start
-$theme := {
-  primary: #9c27b0
-  accent: #ce93d8
-  secondary: #424242
-  info: #0D47A1
-  warning: #ffb300
-  error: #B71C1C
-  success: #2E7D32
-}
+
 
 // Import Vuetify styling
 @require '~vuetify/src/stylus/main.styl'
+$theme := {
+  primary: $blue.darken-2
+  accent: $blue.accent-2
+  secondary: $grey.darken-3
+  info: $blue.base
+  warning: $amber.base
+  error: $red.base
+  success: $green.base
+}
