update styles with mui-css

--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,57 +1,7 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+.mui-appbar {
+  background-color: #424242;
+  color: #FFF;
 }
-
-.page-enter-active, .page-leave-active {
-  transition: opacity .5s
-}
-
-.page-enter, .page-leave-active {
-  opacity: 0
-}
-
-.bounce-enter-active {
-  animation: bounce-in .8s;
-}
-
-.bounce-leave-active {
-  animation: bounce-out .5s;
-}
-
-@keyframes bounce-in {
-  0% {
-    transform: scale(0)
-  }
-  50% {
-    transform: scale(1.5)
-  }
-  100% {
-    transform: scale(1)
-  }
-}
-
-@keyframes bounce-out {
-  0% {
-    transform: scale(1)
-  }
-  50% {
-    transform: scale(1.5)
-  }
-  100% {
-    transform: scale(0)
-  }
-}
-
-/* .slide-left-enter,
-.slide-right-leave-active {
-  opacity: 0;
-  transform: translate(30px, 0);
-}
-.slide-left-leave-active,
-.slide-right-enter {
-  opacity: 0;
-  transform: translate(-30px, 0);
-} */
 
 .page-enter-active, .page-leave-active {
   transition: all .45s ease-in-out;
@@ -63,79 +13,73 @@ body {
   transform: translate(10px, 0);
 }
 
-.slide-enter-active, .slide-leave-active {
-  transition: all .3s ease;
-}
-
-.slide-enter, .slide-leave-active {
-  transform: translateX(230px);
-}
-
-.section {
-  max-width: 1000px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-div#__nuxt {
-  padding: 1em;
-}
-
 nav {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  align-items: center;
+  height: 64px;
+  max-width: 450px;
+  justify-content: center;
 }
 
+
 nav a {
-  color: #404040;
+  color: #f9f9f9;
   font-weight: 400;
+  font-size: 1.1em;
+  margin: 0 1.5em;
+  border-bottom: 2px solid transparent;
+  transition: all .2s ease;
+  text-decoration: none !important;
+  padding: .5em 1em;
+}
+
+nav a:hover, nav a:focus {
+  border-bottom: 3px solid #c3e6d978;
 }
 
 .nuxt-link-exact-active {
   font-weight: 700;
-  color: #35495e;
   text-decoration: none;
+  /* border-bottom: 2px solid white; */
+  border-bottom: 3px solid #2196F3;
+}
+
+.nuxt-link-exact-active:hover, .nuxt-link-exact-active:focus {
+  border-bottom: 3px solid #2196F3;
+}
+
+div#content-wrapper {
+  margin-top: 1.5em;
+  padding-top: 2.25em;
+}
+
+span.render-result {
+    text-transform: uppercase;
+    /* color: #3F51B5; */
+    color: #2196F3;
+    font-style: italic;
+    /* color: #222; */
+    font-weight: 700;
+    margin-left: .5em;
 }
 
 
-/* From index.vue */
-
-.container {
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+#reload-btn {
+  margin-top: 3.5em;
 }
 
-.title {
-  font-family: "Quicksand", "Source Sans Pro", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; /* 1 */
-  display: block;
-  font-weight: 300;
-  font-size: 50px;
-  color: #35495e;
-  letter-spacing: 1px;
-}
 
-.subtitle {
-  font-weight: 300;
-  font-size: 30px;
-  color: #526488;
-  word-spacing: 5px;
-  padding-bottom: 15px;
-}
 
-.links {
-  padding-top: 15px;
-}
+@media (max-width: 849px) {
+  nav {
+    justify-content: space-around;
+  }
+  nav a {
+    margin: 0 .5em;
 
-.vertical-space {
-  margin: 2em 0;
-}
-
-.render-result span {
-  color: #3F51B5;
-  text-transform: capitalize;
-  font-size: 1.1em;
+  }
 }
